-- volumes in gnome are now stored in libsecret and no longer in libgnome-keyring
-- add a GUI window in zuluCrypt-gui to manage keys in libsecret wallet,internal wallet and kde kwallet.
-- add an internal system that can securely store keys independently of kde kwallet and gnome libsecret.Useful to those who
   want to store keys securely but dont want gnome or kde dependencies
-- add compile time option to use mount points in user home directory instead of "/run/media/private"
-- NOTE: changes in management of wallets are not backward compatible and hence volumes will have to be readded after the update.My
   apologies for the inconvenience.
-- drop support for updating /etc/mtab and remove libmount as a required dependency
-- add a Qt5 port,see build instrunctions on how to build Qt5 version

version 4.6.7
-- fix packaging issues
-- fix a regression on zuluMount-gui that caused a hang when checking for properties of an opened volume opened by a different user

version 4.6.8
-- store partition id in wallets by device hardware id on volumes that do not have UUID( non LUKS volumes )
-- add support for exfat file system.
-- add support for creating a backup and restoring from backup truecrypt volume headers(tcplay >=2.0.0 required)
-- add a simple CLI tool(zuluSafe-cli) that can be used to store multiple files securely in a single wallet file.
-- add support in zuluMount for opening a plain volume at a user specified offset.This ability will allow hidden volume type
   functionality.In one of the prompts in zuluMount-gui,press "ctrl+f" to bring up the dialog that accepts the offset.
-- add support for multi device btrfs volumes.

version 4.6.9
-- move config files to "/etc/zuluCrypt" from "/etc"
-- add a config file "/etc/zuluCrypt/fs_options" where default file system mount options can be specified per UUID.
   -format is:one entry per line,example entry: UUID="abcf" uid=500
-- fix a bug,if udev is enabled,mounted image files were always treated as system volumes.