@@ -39,7 +39,7 @@
 #include <limits.h>
 #include <sys/mman.h>
 #include <dirent.h>
-
+#include <sys/stat.h>
 #include <string.h>
 #include <stdio.h>
 #include <stdlib.h>
@@ -60,6 +60,7 @@
 #define BLOCK_SIZE 16
 #define IV_SIZE 16
 #define SALT_SIZE 16
+#define FILE_BLOCK_SIZE 1024
 
 #define PBKDF2_ITERATIONS 10000
 
@@ -202,6 +203,52 @@ static lxqt_wallet_error _exit_create( lxqt_wallet_error r,gcry_cipher_hd_t hand
 	return r ;
 }
 
+static lxqt_wallet_error lxqt_wallet_create_1( gcry_cipher_hd_t * h,const char * password,
+					       u_int32_t password_length,char * key,char * iv,
+					       char * salt )
+{
+	gcry_error_t r ;
+
+	gcry_cipher_hd_t handle ;
+
+	if( gcry_control( GCRYCTL_INITIALIZATION_FINISHED_P ) != 0 ){
+		gcry_check_version( NULL ) ;
+		gcry_control( GCRYCTL_INITIALIZATION_FINISHED,0 ) ;
+	}
+
+	r = gcry_cipher_open( h,GCRY_CIPHER_AES256,GCRY_CIPHER_MODE_CBC,0 ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return lxqt_wallet_gcry_cipher_open_failed ;
+	}
+
+	handle = *h ;
+
+	_get_random_data( salt,SALT_SIZE ) ;
+
+	r = _create_key( salt,key,password,password_length ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return lxqt_wallet_failed_to_create_key_hash ;
+	}
+
+	r = gcry_cipher_setkey( handle,key,PASSWORD_SIZE ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return lxqt_wallet_gcry_cipher_setkey_failed ;
+	}
+
+	_get_random_data( iv,IV_SIZE ) ;
+
+	r = gcry_cipher_setiv( handle,iv,IV_SIZE ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return lxqt_wallet_gcry_cipher_setiv_failed ;
+	}else{
+		return r ;
+	}
+}
+
 lxqt_wallet_error lxqt_wallet_create( const char * password,u_int32_t password_length,
 				      const char * wallet_name,const char * application_name )
 {
@@ -212,9 +259,8 @@ lxqt_wallet_error lxqt_wallet_create( const char * password,u_int32_t password_l
 	char salt[ SALT_SIZE ] ;
 	char buffer[ MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE ] = { '\0' } ;
 
-	gcry_error_t r ;
-
 	gcry_cipher_hd_t handle = 0 ;
+	gcry_error_t r ;
 
 	if( password == NULL || wallet_name == NULL || application_name == NULL ){
 		return _exit_create( lxqt_wallet_invalid_argument,handle ) ;
@@ -223,47 +269,15 @@ lxqt_wallet_error lxqt_wallet_create( const char * password,u_int32_t password_l
 		return _exit_create( lxqt_wallet_wallet_exists,handle ) ;
 	}
 
-	gcry_check_version( NULL ) ;
-
-	gcry_control( GCRYCTL_INITIALIZATION_FINISHED,0 ) ;
-
-	r = gcry_cipher_open( &handle,GCRY_CIPHER_AES256,GCRY_CIPHER_MODE_CBC,0 ) ;
+	r = lxqt_wallet_create_1( &handle,password,password_length,key,iv,salt ) ;
 
 	if( r != GPG_ERR_NO_ERROR ){
-		return _exit_create( lxqt_wallet_gcry_cipher_open_failed,handle ) ;
-	}
-
-	_get_random_data( salt,SALT_SIZE ) ;
-
-	r = _create_key( salt,key,password,password_length ) ;
-
-	if( r != GPG_ERR_NO_ERROR ){
-		return _exit_create( lxqt_wallet_failed_to_create_key_hash,handle ) ;
-	}
-
-	r = gcry_cipher_setkey( handle,key,PASSWORD_SIZE ) ;
-
-	if( r != GPG_ERR_NO_ERROR ){
-		return _exit_create( lxqt_wallet_gcry_cipher_setkey_failed,handle ) ;
-	}
-
-	_get_random_data( iv,IV_SIZE ) ;
-
-	r = gcry_cipher_setiv( handle,iv,IV_SIZE ) ;
-
-	if( r != GPG_ERR_NO_ERROR ){
-		return _exit_create( lxqt_wallet_gcry_cipher_setiv_failed,handle ) ;
-	}
-
-	_create_magic_string_header( buffer ) ;
-
-	r = gcry_cipher_encrypt( handle,buffer,MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE,NULL,0 ) ;
-
-	gcry_cipher_close( handle ) ;
-
-	if( r != GPG_ERR_NO_ERROR ){
-		return lxqt_wallet_gcry_cipher_encrypt_failed ;
+		return _exit_create( lxqt_wallet_gcry_cipher_encrypt_failed,handle ) ;
 	}else{
+		_create_magic_string_header( buffer ) ;
+
+		r = gcry_cipher_encrypt( handle,buffer,MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE,NULL,0 ) ;
+
 		_create_application_wallet_path( application_name ) ;
 
 		_wallet_full_path( path,PATH_MAX,wallet_name,application_name ) ;
@@ -271,7 +285,7 @@ lxqt_wallet_error lxqt_wallet_create( const char * password,u_int32_t password_l
 		fd = open( path,O_WRONLY|O_CREAT,0600 ) ;
 
 		if( fd == -1 ){
-			return lxqt_wallet_failed_to_open_file ;
+			return _exit_create( lxqt_wallet_failed_to_open_file,handle ) ;
 		}else{
 			/*
 			 * first 16 bytes are for PBKDF2 salt
@@ -291,8 +305,106 @@ lxqt_wallet_error lxqt_wallet_create( const char * password,u_int32_t password_l
 			write( fd,buffer + MAGIC_STRING_BUFFER_SIZE,BLOCK_SIZE ) ;
 
 			close( fd ) ;
-			return lxqt_wallet_no_error ;
+			return _exit_create( lxqt_wallet_no_error,handle ) ;
 		}
+	}
+}
+
+lxqt_wallet_error lxqt_wallet_create_encrypted_file( const char * password,u_int32_t password_length,
+						     const char * source,const char * destination,int(*function)( int ) )
+{
+	gcry_error_t r ;
+	int fd_dest ;
+	int fd_src ;
+	char iv[ IV_SIZE ] ;
+	char key[ PASSWORD_SIZE ] ;
+	char salt[ SALT_SIZE ] ;
+	char buffer[ MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE ] = { '\0' } ;
+	char file_buffer[ FILE_BLOCK_SIZE ] ;
+	u_int64_t size ;
+	u_int64_t i ;
+	u_int64_t j ;
+	u_int64_t l ;
+	int k ;
+	gcry_cipher_hd_t handle = 0 ;
+
+	struct stat st ;
+
+	if( password == NULL || source == NULL || destination == NULL ){
+		return lxqt_wallet_invalid_argument ;
+	}
+
+	if( stat( destination,&st ) == 0 ){
+		return lxqt_wallet_failed_to_open_file ;
+	}
+
+	r = lxqt_wallet_create_1( &handle,password,password_length,key,iv,salt ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return _exit_create( lxqt_wallet_gcry_cipher_encrypt_failed,handle ) ;
+	}else{
+		fd_dest = open( destination,O_WRONLY|O_CREAT,0600 ) ;
+		if( fd_dest == -1 ){
+			return _exit_create( lxqt_wallet_failed_to_open_file,handle ) ;
+		}
+		fd_src = open( source,O_RDONLY ) ;
+		if( fd_src == -1 ){
+			close( fd_dest ) ;
+			return _exit_create( lxqt_wallet_failed_to_open_file,handle ) ;
+		}
+		/*
+		 * first 16 bytes are for PBKDF2 salt
+		 */
+		write( fd_dest,salt,SALT_SIZE ) ;
+		/*
+		 * second 16 bytes are for AES IV
+		 */
+		write( fd_dest,iv,IV_SIZE ) ;
+
+		fstat( fd_src,&st ) ;
+		size = st.st_size ;
+
+		_create_magic_string_header( buffer ) ;
+
+		memcpy( buffer + MAGIC_STRING_BUFFER_SIZE,&size,sizeof( u_int64_t ) ) ;
+
+		gcry_cipher_encrypt( handle,buffer,MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE,NULL,0 ) ;
+
+		/*
+		 * write third 16 byte and fourth 16 to the header
+		 */
+		write( fd_dest,buffer,MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE ) ;
+
+		i = 0 ;
+		j = 0 ;
+		l = 0 ;
+		while( 1 ){
+			k = read( fd_src,file_buffer,FILE_BLOCK_SIZE ) ;
+			if( k == 0 ){
+				break ;
+			}
+			r = gcry_cipher_encrypt( handle,file_buffer,FILE_BLOCK_SIZE,NULL,0 ) ;
+			write( fd_dest,file_buffer,FILE_BLOCK_SIZE ) ;
+			if( k < FILE_BLOCK_SIZE ){
+				break ;
+			}
+			i += FILE_BLOCK_SIZE ;
+			j = ( i * 100 / size ) ;
+			if( j > l ){
+				if( function ){
+					if( function( j ) ){
+						break ;
+					}
+				}
+				l = j ;
+			}
+		}
+		if( function ){
+			function( 100 ) ;
+		}
+		close( fd_dest ) ;
+		close( fd_src ) ;
+		return  _exit_create( lxqt_wallet_no_error,handle ) ;
 	}
 }
 
@@ -336,6 +448,155 @@ static lxqt_wallet_error _exit_open( lxqt_wallet_error st,
 	return st ;
 }
 
+static lxqt_wallet_error _lxqt_wallet_open_0( gcry_cipher_hd_t * h,struct lxqt_wallet_struct * w,
+					      const char * password,u_int32_t password_length,int fd,char * buffer )
+{
+	gcry_error_t r ;
+	gcry_cipher_hd_t handle ;
+	char iv[ IV_SIZE ] ;
+
+	if( gcry_control( GCRYCTL_INITIALIZATION_FINISHED_P ) != 0 ){
+		gcry_check_version( NULL ) ;
+		gcry_control( GCRYCTL_INITIALIZATION_FINISHED,0 ) ;
+	}
+
+	r = gcry_cipher_open( h,GCRY_CIPHER_AES256,GCRY_CIPHER_MODE_CBC,0 ) ;
+
+	handle = *h ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return lxqt_wallet_gcry_cipher_open_failed ;
+	}
+
+	_get_salt_from_wallet_header( w->salt,fd ) ;
+
+	r = _create_key( w->salt,w->key,password,password_length ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return lxqt_wallet_failed_to_create_key_hash ;
+	}
+
+	r = gcry_cipher_setkey( handle,w->key,PASSWORD_SIZE ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return lxqt_wallet_gcry_cipher_setkey_failed ;
+	}
+
+	_get_iv_from_wallet_header( iv,fd ) ;
+
+	r = gcry_cipher_setiv( handle,iv,IV_SIZE ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		return lxqt_wallet_gcry_cipher_setiv_failed ;
+	}else{
+		_get_volume_info( buffer,fd ) ;
+		return gcry_cipher_decrypt( handle,buffer,MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE,NULL,0 ) ;
+	}
+}
+
+lxqt_wallet_error lxqt_wallet_create_decrypted_file( const char * password,u_int32_t password_length,
+						     const char * source,const char * destination,int( *function )( int ) )
+{
+	gcry_error_t r ;
+
+	int fd_dest ;
+	int fd_src ;
+
+	struct stat st ;
+
+	char buffer[ MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE ] = { '\0' } ;
+	char file_buffer[ FILE_BLOCK_SIZE ] ;
+
+	u_int64_t size ;
+	u_int64_t i ;
+	u_int64_t j ;
+	u_int64_t l ;
+	u_int64_t n ;
+	u_int64_t t ;
+
+	gcry_cipher_hd_t handle = 0 ;
+
+	struct lxqt_wallet_struct * w ;
+
+	if( password == NULL || source == NULL || destination == NULL ){
+		return lxqt_wallet_invalid_argument ;
+	}
+
+	if( stat( destination,&st ) == 0 ){
+		return lxqt_wallet_failed_to_open_file ;
+	}
+
+	w = malloc( sizeof( struct lxqt_wallet_struct ) ) ;
+
+	if( w == NULL ){
+		return _exit_open( lxqt_wallet_failed_to_allocate_memory,NULL,handle,-1 ) ;
+	}
+
+	memset( w,'\0',sizeof( struct lxqt_wallet_struct ) ) ;
+
+	fd_src = open( source,O_RDONLY ) ;
+	if( fd_src == -1 ){
+		return _exit_open( lxqt_wallet_failed_to_open_file,w,handle,-1 ) ;
+	}
+
+	r = _lxqt_wallet_open_0( &handle,w,password,password_length,fd_src,buffer ) ;
+
+	if( r != GPG_ERR_NO_ERROR ){
+		close( fd_src ) ;
+		return _exit_open( lxqt_wallet_failed_to_open_file,w,handle,-1 ) ;
+	}
+
+	if( _password_match( buffer ) && _wallet_is_compatible( buffer ) ){
+		fd_dest = open( destination,O_WRONLY|O_CREAT,0600 ) ;
+		if( fd_dest == -1 ){
+			close( fd_src ) ;
+			return _exit_open( lxqt_wallet_failed_to_open_file,w,handle,-1 ) ;
+		}
+
+		_get_load_information( w,buffer ) ;
+
+		size = w->wallet_data_size ;
+
+		i = 0 ;
+		j = 0 ;
+		l = 0 ;
+
+		n = size / FILE_BLOCK_SIZE ;
+
+		for( t = 0 ; t < n ; t++ ){
+			read( fd_src,file_buffer,FILE_BLOCK_SIZE ) ;
+			gcry_cipher_decrypt( handle,file_buffer,FILE_BLOCK_SIZE,NULL,0 ) ;
+			write( fd_dest,file_buffer,FILE_BLOCK_SIZE ) ;
+			i += FILE_BLOCK_SIZE ;
+			j = ( i * 100 / size ) ;
+			if( j > l ){
+				if( function ){
+					if( function( j ) ){
+						break ;
+					}
+				}
+				l = j ;
+			}
+		}
+
+		size = size - i ;
+
+		read( fd_src,file_buffer,FILE_BLOCK_SIZE ) ;
+		gcry_cipher_decrypt( handle,file_buffer,FILE_BLOCK_SIZE,NULL,0 ) ;
+		write( fd_dest,file_buffer,size ) ;
+
+		close( fd_src ) ;
+		close( fd_dest ) ;
+		if( function ){
+			function( 100 ) ;
+		}
+		return _exit_open( lxqt_wallet_no_error,w,handle,-1 ) ;
+	}else{
+		close( fd_src ) ;
+		return _exit_open( lxqt_wallet_wrong_password,w,handle,-1 ) ;
+	}
+}
+
 static lxqt_wallet_error _lxqt_wallet_open( const char * password,u_int32_t password_length,
 					    const char * wallet_name,const char * application_name,char * buffer,
 					    int * ffd,struct lxqt_wallet_struct ** ww,gcry_cipher_hd_t * h )
@@ -343,7 +604,6 @@ static lxqt_wallet_error _lxqt_wallet_open( const char * password,u_int32_t pass
 	gcry_error_t r ;
 	gcry_cipher_hd_t handle = 0 ;
 
-	char iv[ IV_SIZE ] ;
 	char path[ PATH_MAX ] ;
 
 	int fd ;
@@ -359,10 +619,6 @@ static lxqt_wallet_error _lxqt_wallet_open( const char * password,u_int32_t pass
 	if( fd == -1 ){
 		return _exit_open( lxqt_wallet_failed_to_open_file,NULL,handle,fd ) ;
 	}
-
-	gcry_check_version( NULL ) ;
-
-	gcry_control( GCRYCTL_INITIALIZATION_FINISHED,0 ) ;
 
 	w = malloc( sizeof( struct lxqt_wallet_struct ) ) ;
 
@@ -392,37 +648,7 @@ static lxqt_wallet_error _lxqt_wallet_open( const char * password,u_int32_t pass
 		memcpy( w->application_name,application_name,len + 1 ) ;
 	}
 
-	r = gcry_cipher_open( &handle,GCRY_CIPHER_AES256,GCRY_CIPHER_MODE_CBC,0 ) ;
-
-	if( r != GPG_ERR_NO_ERROR ){
-		return _exit_open( lxqt_wallet_gcry_cipher_open_failed,w,handle,fd ) ;
-	}
-
-	_get_salt_from_wallet_header( w->salt,fd ) ;
-
-	r = _create_key( w->salt,w->key,password,password_length ) ;
-
-	if( r != GPG_ERR_NO_ERROR ){
-		return _exit_open( lxqt_wallet_failed_to_create_key_hash,w,handle,fd ) ;
-	}
-
-	r = gcry_cipher_setkey( handle,w->key,PASSWORD_SIZE ) ;
-
-	if( r != GPG_ERR_NO_ERROR ){
-		return _exit_open( lxqt_wallet_gcry_cipher_setkey_failed,w,handle,fd ) ;
-	}
-
-	_get_iv_from_wallet_header( iv,fd ) ;
-
-	r = gcry_cipher_setiv( handle,iv,IV_SIZE ) ;
-
-	if( r != GPG_ERR_NO_ERROR ){
-		return _exit_open( lxqt_wallet_gcry_cipher_setiv_failed,w,handle,fd ) ;
-	}
-
-	_get_volume_info( buffer,fd ) ;
-
-	r =  gcry_cipher_decrypt( handle,buffer,MAGIC_STRING_BUFFER_SIZE + BLOCK_SIZE,NULL,0 ) ;
+	r = _lxqt_wallet_open_0( &handle,w,password,password_length,fd,buffer ) ;
 
 	if( r != GPG_ERR_NO_ERROR ){
 		return _exit_open( lxqt_wallet_gcry_cipher_decrypt_failed,w,handle,fd ) ;
